// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderSectionItem border defaults to left 1`] = `
<div
  class="euiHeaderSectionItem euiHeaderSectionItem--borderLeft"
/>
`;

exports[`EuiHeaderSectionItem border renders right 1`] = `
<div
  class="euiHeaderSectionItem euiHeaderSectionItem--borderRight"
/>
`;

exports[`EuiHeaderSectionItem is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiHeaderSectionItem euiHeaderSectionItem--borderLeft testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiHeaderSectionItem renders children 1`] = `
<div
  class="euiHeaderSectionItem euiHeaderSectionItem--borderLeft"
>
  <span>
    Call me Ishmael.
  </span>
</div>
`;
